fixed the finance it banner on mobile

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -3687,3 +3687,10 @@
         margin: auto;
     }
 }
+
+@media only screen and (max-width: 600px){
+    #financeit banner{
+        width: 80vw;
+        height: auto;
+    }
+}
